# ratatui-website

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.yaml  .mise.toml  .prettierrc  .rustfmt.toml  .stylelintrc.json  .vale.ini  404.html  CNAME  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.html  LICENSE.md  NOTICES  README.md  astro.config.mjs  bacon.toml  book.toml  contributors.html  faq.html  index.html  installation.html  introduction.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  print.html  searchindex.js  searchindex.json  shell.nix  tailwind.config.mjs  tsconfig.json  typos.toml  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.husky/: pre-commit
code/counter-app-basic/: Cargo.toml
code/counter-app-basic/src/: main.rs  tui.rs
code/counter-app-error-handling/: Cargo.toml  generate-demos.sh  panic.tape
code/counter-app-error-handling/src/: errors.rs  main.rs  tui.rs
code/counter-app-events/: Cargo.toml
code/counter-app-events/src/: app.rs  events.rs  logging.rs  main.rs
code/crates-tui-tutorial-app/: .gitignore  Cargo.toml  LICENSE  demo.tape
code/crates-tui-tutorial-app/src/: app.rs  crates_io_api_helper.rs  errors.rs  events.rs  lib.rs  tui.rs  widgets.rs
code/crates-tui-tutorial-app/src/widgets/: search_page.rs  search_prompt.rs  search_results.rs  status_bar.rs
code/examples/ratatui-examples/: Cargo.toml
code/examples/ratatui-examples/examples/: README.md  barchart.rs  block.rs  calendar.rs  canvas.rs  chart.rs  colors.rs  colors_rgb.rs  constraint-explorer.rs  constraints.rs  flex.rs  gauge.rs  hello_world.rs  inline.rs  list.rs  minimal.rs  modifiers.rs  panic.rs  paragraph.rs  popup.rs  scrollbar.rs  sparkline.rs  table.rs  tabs.rs  user_input.rs  widget_impl.rs
code/examples/ratatui-examples/examples/demo/: app.rs  crossterm.rs  termion.rs  termwiz.rs  ui.rs
code/examples/ratatui-examples/examples/demo2/: app.rs  destroy.rs
code/examples/ratatui-examples/examples/demo2/tabs/: weather.rs
code/hello-world-tutorial/: Cargo.toml  hello.tape
code/hello-world-tutorial/src/: main.rs
code/how-to-center-a-rec/: Cargo.toml
code/how-to-center-a-rec/src/: main.rs
code/how-to-panic-hooks/: Cargo.toml
code/ratatui-counter-async-app/: Cargo.toml
code/ratatui-counter-async-app/src/: main.rs  tui.rs
code/ratatui-examples/: .rustfmt.toml  Cargo.toml  README.md
code/ratatui-examples/examples/: README.md  barchart.rs  block.rs  calendar.rs  canvas.rs  chart.rs  colors.rs  colors_rgb.rs  constraint-explorer.rs  constraints.rs  custom_widget.rs  docsrs.rs  flex.rs  gauge.rs  hello_world.rs  inline.rs  layout.rs  list.rs  modifiers.rs  panic.rs  paragraph.rs  popup.rs  ratatui-logo.rs  scrollbar.rs  sparkline.rs  table.rs  tabs.rs  user_input.rs
code/ratatui-examples/examples/demo/: crossterm.rs  main.rs  ui.rs
code/ratatui-examples/examples/demo2/: app.rs  big_text.rs  destroy.rs  main.rs  term.rs
code/ratatui-examples/examples/demo2/tabs/: about.rs  email.rs  traceroute.rs  weather.rs
code/ratatui-json-editor-app/: Cargo.toml  demo.tape
code/ratatui-json-editor-app/src/: app.rs  main.rs  ui.rs
code/ratatui-stopwatch-app/: Cargo.toml
code/ratatui-stopwatch-app/src/: main.rs
code/showcase/widget-showcase/: Cargo.toml  README.md  block.tape  calendar.tape  canvas.tape  chart.tape  gauge.tape  scrollbar.tape  sparkline.tape  table.tape  tabs.tape
code/showcase/widget-showcase/src/: examples.rs  main.rs  tui.rs
code/showcase/widget-showcase/src/examples/: bar_chart.rs  block.rs  chart.rs  line_gauge.rs  scrollbar.rs  sparkline.rs  table.rs  tabs.rs
code/tutorials/counter-app-basic/: Cargo.toml  basic-app-error.tape  basic-app.tape
code/tutorials/counter-app-basic/src/: main.rs  tui.rs
code/tutorials/counter-app-error-handling/: Cargo.toml  error-full.tape  error.tape  generate-demos.sh  panic-full.tape
code/tutorials/counter-app-error-handling/src/: main.rs  tui.rs
code/tutorials/hello-ratatui/: Cargo.toml  README.md
code/tutorials/hello-ratatui/src/: main.rs
code/tutorials/json-editor/: Cargo.toml
code/tutorials/json-editor/src/: app.rs  main.rs  ui.rs
code/tutorials/ratatui-counter-async-app/: Cargo.toml
code/tutorials/ratatui-counter-async-app/src/: main.rs
code/tutorials/ratatui-stopwatch-app/: Cargo.toml
code/tutorials/ratatui-stopwatch-app/src/: main.rs
code/widget-showcase/: Cargo.toml  README.md  bar_chart.tape  block.tape  calendar.tape  chart.tape  gauge.tape  line_gauge.tape  list.tape  paragraph.tape  table.tape
code/widget-showcase/src/: examples.rs  main.rs  tui.rs
code/widget-showcase/src/examples/: bar_chart.rs  block.rs  calendar.rs  canvas.rs  chart.rs  gauge.rs  line_gauge.rs  list.rs  paragraph.rs  sparkline.rs  table.rs  tabs.rs
concepts/: component-architecture.html  event_handling.html  flux-architecture.html  index.html  rendering-under-the-hood.html  rendering.html  the-elm-architecture.html
developer-guide/: book.html  ratatui.html
faq/: duplicate-key-events-windows.html  index.html  ratatui-vs-tui-realm.html  tokio-async.html  tui-rs-history.html
getting-started/: features.html  getting-started.html  index.html  installation.html
highlights/: v0.21.html  v0.22.html  v0.23.html  v0.24.html
how-to/: center-a-rect.html  choose-a-backend.html  choosing-a-backend.html  clap.html  combine-terminal-and-eventhandler.html  features.html  handle-xdg-directories.html  index.html  layout-constraints-basics.html  setup-logging-tracing.html  setup-panic-hooks-better-panic.html  setup-panic-hooks.html
html/: 404.html  LICENSE.html  contributors.html  index.html  installation.html  print.html  searchindex.js  searchindex.json
integrations/: index.html
pr-preview/pr-64/html/tutorial/stopwatch-app/ratatui-stopwatch-app/: Cargo.toml
pr-preview/pr-64/html/tutorial/stopwatch-app/ratatui-stopwatch-app/src/: main.rs
ratatui-book-tutorial-project/: Cargo.toml
references/: features.html  index.html
scripts/: build.sh
showcase/: index.html
site/: config.toml
src/: LICENSE.md  README.md  SUMMARY.md  faq.md  (+8 more)
(+2562 files in other folders)
