# See https://doc.rust-lang.org/cargo/reference/workspaces.html
[workspace]
members = [
    "code/hello-world-tutorial",
    "code/ratatui-counter-app",
    "code/ratatui-counter-async-app",
    "code/ratatui-json-editor-app",
    "code/ratatui-stopwatch-app",
    "code/how-to-collapse-borders",
]
resolver = "2"

[workspace.package]
version = "0.0.0"                                         # we don't want to publish this workspace
authors = ["The Ratatui Developers"]
description = "Sample code for the Ratatui book"
documentation = "https://docs.rs/ratatui/latest/ratatui/"
repository = "https://github.com/ratatui-org/ratatui"
keywords = ["tui", "terminal", "dashboard"]
license = "MIT"
edition = "2021"
rust-version = "1.70.0"
