# See https://doc.rust-lang.org/cargo/reference/workspaces.html
[workspace]
members = [
  "code/examples/*",
  "code/recipes/*",
  "code/showcase/*",
  "code/tutorials/*",
]
exclude = [
  "code/showcase/widget-showcase-third-party", # only contains VHS tape files
]
resolver = "2"

[workspace.package]
version = "0.0.0"
authors = ["The Ratatui Developers"]
description = "Sample code for the Ratatui book"
documentation = "https://docs.rs/ratatui/latest/ratatui/"
repository = "https://github.com/ratatui/ratatui"
keywords = ["tui", "terminal", "dashboard"]
license = "MIT"
edition = "2021"
rust-version = "1.74.0"
publish = false
