[package]
name = "counter-app-events"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# ANCHOR: dependencies
[dependencies]
clap = {version = "4.5.1", features = ["derive"] }
color-eyre = "0.6.2"
crossterm = "0.27.0"
itertools = "0.12.1"
ratatui = "0.26.1"
time = {version = "0.3.34", features = ["formatting", "macros"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# ANCHOR_END: dependencies
