[package]
name = "how-to-center-a-rec"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
ratatui = "0.26.1"
crossterm = "0.27.0"
