[package]
name = "ratatui-json-editor-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.2"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
