[package]
name = "ratatui-stopwatch-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.27.0", features = ["event-stream"] }
directories = "5.0.1"
futures = "0.3.30"
human-panic = "2.0.0"
itertools = "0.13.0"
libc = "0.2.155"
log = "0.4.22"
ratatui = "0.27.0"
strip-ansi-escapes = "0.2.0"
strum = "0.26.3"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = "0.7.11"
tui-big-text = "0.4.5"
