[package]
name = "ratatui-examples"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[features]
default = ["crossterm"]
crossterm = ["ratatui/crossterm"]
termion = ["ratatui/termion"]
termwiz = ["ratatui/termwiz"]
unstable-widget-ref = ["ratatui/unstable-widget-ref"]

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
ratatui = { version = "0.29.0", features = ["widget-calendar"] }

[dev-dependencies]
anyhow = "1.0.97"
argh = "0.1.13"
better-panic = "0.3.0"
color-eyre = "0.6.2"
criterion = { version = "0.5.1", features = ["html_reports"] }
derive_builder = "0.20.2"
fakeit = "1.1"
font8x8 = "0.3.1"
futures = "0.3.31"
indoc = "2"
octocrab = "0.44.0"
palette = "0.7.3"
pretty_assertions = "1.4.1"
rand = "0.9.0"
rand_chacha = "0.9.0"
rstest = "0.25.0"
serde_json = "1.0.140"
itertools = "0.14"
strum = { version = "0.27.1", features = ["derive"] }
time = { version = "0.3.41", features = ["local-offset"] }
tokio = { version = "1.44.1", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
unicode-width = "0.2"

[[example]]
name = "widget_impl"
required-features = ["unstable-widget-ref"]
