[package]
name = "widget-showcase"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.3"
ratatui = { version = "0.30.0", features = ["all-widgets"] }
time = "0.3.44"
lipsum = "0.9.1"
textwrap = "0.16.2"
