[package]
name = "counter-app-error-handling"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# ANCHOR: dependencies
[dependencies]
color-eyre = "0.6.3"
ratatui = "0.30.0"
# ANCHOR_END: dependencies
