[package]
name = "ratatui-stopwatch-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
directories = "6.0.0"
futures = "0.3.31"
human-panic = "2.0.2"
itertools = "0.14.0"
libc = "0.2.170"
log = "0.4.26"
ratatui = "0.29.0"
strip-ansi-escapes = "0.2.1"
strum = "0.27.1"
tokio = { version = "1.44.0", features = ["full"] }
tokio-util = "0.7.13"
tui-big-text = "0.7.1"
